Video header styles, added primer_pre_hero action in header.php (#42)
* Introduce video header styles.
* Introduce `primer_pre_hero` action in `header.php`

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -1,3 +1,5 @@
+@import "video-header";
+
 $entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 
 .featured-content {
@@ -141,5 +143,11 @@ $entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 		@media #{$small-only} {
 			padding-top: 0;
 		}
+	}
+}
+
+.site-header {
+	#wp-custom-header img {
+		display: none;
 	}
 }
