--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -261,6 +261,7 @@ body.woocommerce-cart {
 	width: 100%;
 	font-size: 16px;
 	text-align: center;
+	white-space: normal;
 }
 
 @media #{$small-only} {
