--- a/style.css
+++ b/style.css
@@ -4495,7 +4495,8 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
 .woocommerce ul.products li.product a.add_to_cart_button {
   width: 100%;
   font-size: 16px;
-  text-align: center; }
+  text-align: center;
+  white-space: normal; }
 
 @media only screen and (max-width: 55em) {
   .primer-wc-cart-menu-item .widget_shopping_cart {
