--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4512,3 +4512,95 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
         max-width: 65px; }
     .primer-wc-cart-menu-item .widget_shopping_cart .mini_cart_item a.remove {
       margin-top: 20px; } }
+
+/*--------------------------------------------------------------
+>>> Gutenberg:
+--------------------------------------------------------------*/
+.wp-block-cover-image.alignfull,
+.wp-block-image.alignfull,
+.wp-block-cover-text.alignfull,
+.wp-block-image.alignfull,
+.wp-block-gallery.alignfull,
+.wp-block-text-columns.alignfull {
+  margin-right: -4.4375rem;
+  max-width: 100%; }
+  @media only screen and (max-width: 55em) {
+    .wp-block-cover-image.alignfull,
+    .wp-block-image.alignfull,
+    .wp-block-cover-text.alignfull,
+    .wp-block-image.alignfull,
+    .wp-block-gallery.alignfull,
+    .wp-block-text-columns.alignfull {
+      max-width: inherit; } }
+  .wp-block-cover-image.alignfull figcaption,
+  .wp-block-image.alignfull figcaption,
+  .wp-block-cover-text.alignfull figcaption,
+  .wp-block-image.alignfull figcaption,
+  .wp-block-gallery.alignfull figcaption,
+  .wp-block-text-columns.alignfull figcaption {
+    padding: 0 3.375em; }
+
+.wp-block-image.alignfull > img,
+.wp-block-cover-image.alignfull img,
+.wp-block-image.alignfull img {
+  width: -webkit-calc( 100% + 8.875rem);
+  width: calc( 100% + 8.875rem);
+  max-width: -webkit-calc( 100% + 8.875rem);
+  max-width: calc( 100% + 8.875rem); }
+  @media only screen and (max-width: 55em) {
+    .wp-block-image.alignfull > img,
+    .wp-block-cover-image.alignfull img,
+    .wp-block-image.alignfull img {
+      max-width: -webkit-calc( 100% + 4.4375rem);
+      max-width: calc( 100% + 4.4375rem);
+      width: -webkit-calc( 100% + 4.4375rem);
+      width: calc( 100% + 4.4375rem); } }
+
+.wp-block-cover-image.alignwide,
+.wp-block-image.alignwide,
+.wp-block-cover-text.alignwide,
+.wp-block-image.alignwide,
+.wp-block-gallery.alignwide,
+.wp-block-text-columns.alignwide {
+  margin-right: 0;
+  margin-left: 0; }
+  .wp-block-cover-image.alignwide img,
+  .wp-block-image.alignwide img,
+  .wp-block-cover-text.alignwide img,
+  .wp-block-image.alignwide img,
+  .wp-block-gallery.alignwide img,
+  .wp-block-text-columns.alignwide img {
+    width: 100%;
+    max-height: 100%; }
+
+.wp-block-image.alignleft,
+.wp-block-gallery.alignleft,
+.wp-block-video.alignleft,
+.wp-block-quote.alignleft,
+.wp-block-text-columns.alignleft,
+.entry-content ul.alignleft,
+.entry-content ol.alignleft,
+.wp-block-cover-text.alignleft {
+  max-width: 40%;
+  margin: 0 0 1.5em 1.5em; }
+
+.wp-block-image.alignright,
+.wp-block-gallery.alignright,
+.wp-block-video.alignright,
+.wp-block-quote.alignright,
+.wp-block-text-columns.alignright,
+.entry-content ul.alignright,
+.entry-content ol.alignright,
+.wp-block-cover-text.alignright {
+  max-width: 40%;
+  margin: 0 1.5em 1.5em 0; }
+
+body.customize-support h1,
+body.customize-support h2,
+body.customize-support h3,
+body.customize-support h4,
+body.customize-support h5,
+body.customize-support h6,
+body.customize-support .site-title,
+body.customize-support .page-title {
+  clear: none; }
