--- a/.dev/sass/compat/gutenberg.scss
+++ b/.dev/sass/compat/gutenberg.scss
@@ -1,86 +1,68 @@
 /*--------------------------------------------------------------
 >>> Gutenberg:
 --------------------------------------------------------------*/
-.wp-block-cover-image.alignfull,
-.wp-block-image.alignfull,
-.wp-block-cover-text.alignfull,
-.wp-block-image.alignfull,
-.wp-block-gallery.alignfull,
-.wp-block-text-columns.alignfull {
-	margin-left: -4.4375rem;
-	max-width: 100%;
-	@media #{$small-only} {
-		max-width: inherit;
+body.customize-support {
+	.wp-block-cover-image {
+		margin-bottom: 1.5rem;
 	}
 
-	figcaption {
-		padding: 0 3.375em;
-	}
-}
-
-.wp-block-image.alignfull > img,
-.wp-block-cover-image.alignfull img,
-.wp-block-image.alignfull img {
-	width: calc( 100% + 8.875rem);
-	max-width: calc( 100% + 8.875rem);
-
-	@media #{$small-only} {
-		max-width: calc( 100% + 4.4375rem);
-		width: calc( 100% + 4.4375rem );
-	}
-}
-
-.wp-block-cover-image.alignwide,
-.wp-block-image.alignwide,
-.wp-block-cover-text.alignwide,
-.wp-block-image.alignwide,
-.wp-block-gallery.alignwide,
-.wp-block-text-columns.alignwide {
-	margin-left: 0;
-	margin-right: 0;
-
-	img {
-		width: 100%;
-		max-height: 100%;
-	}
-}
-
-.wp-block-image,
-.wp-block-gallery,
-.wp-block-video,
-.wp-block-quote,
-.wp-block-text-columns,
-.entry-content ul,
-.entry-content ol,
-.wp-block-cover-text {
-	&.alignleft {
-		margin: 0 1em 0.25em 0;
-	}
-
-	&.alignright {
-		margin: 0 0 0.25em 1em;
-	}
-
-	&.alignleft,
-	&.alignright {
-		max-width: 40%;
+	.alignfull {
+		margin-left: -4.4375rem;
+		max-width: 100%;
 		@media #{$small-only} {
-			max-width: 100%;
-			margin-left: 0;
-			margin-right: 0;
+			max-width: inherit;
+		}
+
+		img {
+			width: calc( 100% + 8.875rem);
+			max-width: calc( 100% + 8.875rem);
+
+			@media #{$small-only} {
+				max-width: calc( 100% + 4.4375rem);
+				width: calc( 100% + 4.4375rem );
+			}
 		}
 	}
-}
 
-body.customize-support {
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6,
-	.site-title,
-	.page-title {
-		clear: none;
+	.alignwide {
+		margin-left: 0;
+		margin-right: 0;
+		width: 100%;
+	}
+
+	.wp-block-image,
+	.wp-block-gallery,
+	.wp-block-video,
+	.wp-block-quote,
+	.wp-block-text-columns,
+	.entry-content ul,
+	.entry-content ol,
+	.wp-block-cover-text {
+		&.alignleft {
+			margin: 0 1em 0.5em 0;
+		}
+
+		&.alignright {
+			margin: 0 0 0.5em 1em;
+		}
+
+		&.alignleft,
+		&.alignright {
+			max-width: 40%;
+			width: 100%;
+
+			img {
+				width: inherit;
+			}
+		}
+	}
+
+	.wp-block-gallery {
+		margin-left: 0;
+		margin-right: 0;
+
+		&.is-cropped .blocks-gallery-item img {
+			height: auto;
+		}
 	}
 }
