--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
  * Theme Name: Escapade
  * Theme URI: https://github.com/godaddy/wp-escapade-theme
@@ -259,15 +260,64 @@ select {
   .row:after, .navigation:after, .site-branding-container:after, .main-navigation:after, .featured-content .entry-header .entry-header-row:after, .featured-content .featured-content-inner:after {
     clear: both; }
   .row.collapse > .column, .collapse.navigation > .column, .collapse.site-branding-container > .column, .collapse.main-navigation > .column, .featured-content .entry-header .collapse.entry-header-row > .column, .featured-content .collapse.featured-content-inner > .column,
-  .row.collapse > .columns, .collapse.navigation > .columns, .collapse.site-branding-container > .columns, .collapse.main-navigation > .columns, .featured-content .entry-header .collapse.entry-header-row > .columns, .featured-content .collapse.featured-content-inner > .columns,
-  .row.collapse > #primary, .collapse.navigation > #primary, .collapse.site-branding-container > #primary, .collapse.main-navigation > #primary, .featured-content .entry-header .collapse.entry-header-row > #primary, .featured-content .collapse.featured-content-inner > #primary,
-  .row.collapse > #secondary, .collapse.navigation > #secondary, .collapse.site-branding-container > #secondary, .collapse.main-navigation > #secondary, .featured-content .entry-header .collapse.entry-header-row > #secondary, .featured-content .collapse.featured-content-inner > #secondary,
-  .row.collapse > #tertiary, .collapse.navigation > #tertiary, .collapse.site-branding-container > #tertiary, .collapse.main-navigation > #tertiary, .featured-content .entry-header .collapse.entry-header-row > #tertiary, .featured-content .collapse.featured-content-inner > #tertiary,
-  .row.collapse > .site-branding, .collapse.navigation > .site-branding, .collapse.site-branding-container > .site-branding, .collapse.main-navigation > .site-branding, .featured-content .entry-header .collapse.entry-header-row > .site-branding, .featured-content .collapse.featured-content-inner > .site-branding, .site-footer
-  .row.collapse > .site-info, .site-footer .collapse.navigation > .site-info, .site-footer .collapse.site-branding-container > .site-info, .site-footer .collapse.main-navigation > .site-info, .featured-content .entry-header .site-footer .collapse.entry-header-row > .site-info, .site-footer .featured-content .entry-header .collapse.entry-header-row > .site-info, .featured-content .site-footer .collapse.featured-content-inner > .site-info, .site-footer .featured-content .collapse.featured-content-inner > .site-info, .featured-content .entry-header
-  .row.collapse > .entry-header-column, .featured-content .entry-header .collapse.navigation > .entry-header-column, .featured-content .entry-header .collapse.site-branding-container > .entry-header-column, .featured-content .entry-header .collapse.main-navigation > .entry-header-column, .featured-content .entry-header .collapse.entry-header-row > .entry-header-column, .featured-content .entry-header .collapse.featured-content-inner > .entry-header-column, .site-info-wrapper
-  .row.collapse > .site-info-inner, .site-info-wrapper .collapse.navigation > .site-info-inner, .site-info-wrapper .collapse.site-branding-container > .site-info-inner, .site-info-wrapper .collapse.main-navigation > .site-info-inner, .featured-content .entry-header .site-info-wrapper .collapse.entry-header-row > .site-info-inner, .site-info-wrapper .featured-content .entry-header .collapse.entry-header-row > .site-info-inner, .featured-content .site-info-wrapper .collapse.featured-content-inner > .site-info-inner, .site-info-wrapper .featured-content .collapse.featured-content-inner > .site-info-inner, .featured-content
-  .row.collapse > article, .featured-content .collapse.navigation > article, .featured-content .collapse.site-branding-container > article, .featured-content .collapse.main-navigation > article, .featured-content .entry-header .collapse.entry-header-row > article, .featured-content .collapse.featured-content-inner > article {
+  .row.collapse > .columns,
+  .collapse.navigation > .columns,
+  .collapse.site-branding-container > .columns,
+  .collapse.main-navigation > .columns,
+  .featured-content .entry-header .collapse.entry-header-row > .columns,
+  .featured-content .collapse.featured-content-inner > .columns,
+  .row.collapse > #primary,
+  .collapse.navigation > #primary,
+  .collapse.site-branding-container > #primary,
+  .collapse.main-navigation > #primary,
+  .featured-content .entry-header .collapse.entry-header-row > #primary,
+  .featured-content .collapse.featured-content-inner > #primary,
+  .row.collapse > #secondary,
+  .collapse.navigation > #secondary,
+  .collapse.site-branding-container > #secondary,
+  .collapse.main-navigation > #secondary,
+  .featured-content .entry-header .collapse.entry-header-row > #secondary,
+  .featured-content .collapse.featured-content-inner > #secondary,
+  .row.collapse > #tertiary,
+  .collapse.navigation > #tertiary,
+  .collapse.site-branding-container > #tertiary,
+  .collapse.main-navigation > #tertiary,
+  .featured-content .entry-header .collapse.entry-header-row > #tertiary,
+  .featured-content .collapse.featured-content-inner > #tertiary,
+  .row.collapse > .site-branding,
+  .collapse.navigation > .site-branding,
+  .collapse.site-branding-container > .site-branding,
+  .collapse.main-navigation > .site-branding,
+  .featured-content .entry-header .collapse.entry-header-row > .site-branding,
+  .featured-content .collapse.featured-content-inner > .site-branding,
+  .site-footer .row.collapse > .site-info,
+  .site-footer .collapse.navigation > .site-info,
+  .site-footer .collapse.site-branding-container > .site-info,
+  .site-footer .collapse.main-navigation > .site-info,
+  .featured-content .entry-header .site-footer .collapse.entry-header-row > .site-info,
+  .site-footer .featured-content .entry-header .collapse.entry-header-row > .site-info,
+  .featured-content .site-footer .collapse.featured-content-inner > .site-info,
+  .site-footer .featured-content .collapse.featured-content-inner > .site-info,
+  .featured-content .entry-header .row.collapse > .entry-header-column,
+  .featured-content .entry-header .collapse.navigation > .entry-header-column,
+  .featured-content .entry-header .collapse.site-branding-container > .entry-header-column,
+  .featured-content .entry-header .collapse.main-navigation > .entry-header-column,
+  .featured-content .entry-header .collapse.entry-header-row > .entry-header-column,
+  .featured-content .entry-header .collapse.featured-content-inner > .entry-header-column,
+  .site-info-wrapper .row.collapse > .site-info-inner,
+  .site-info-wrapper .collapse.navigation > .site-info-inner,
+  .site-info-wrapper .collapse.site-branding-container > .site-info-inner,
+  .site-info-wrapper .collapse.main-navigation > .site-info-inner,
+  .featured-content .entry-header .site-info-wrapper .collapse.entry-header-row > .site-info-inner,
+  .site-info-wrapper .featured-content .entry-header .collapse.entry-header-row > .site-info-inner,
+  .featured-content .site-info-wrapper .collapse.featured-content-inner > .site-info-inner,
+  .site-info-wrapper .featured-content .collapse.featured-content-inner > .site-info-inner,
+  .featured-content .row.collapse > article,
+  .featured-content .collapse.navigation > article,
+  .featured-content .collapse.site-branding-container > article,
+  .featured-content .collapse.main-navigation > article,
+  .featured-content .entry-header .collapse.entry-header-row > article,
+  .featured-content .collapse.featured-content-inner > article {
     padding-right: 0;
     padding-left: 0; }
   .row.collapse .row, .collapse.navigation .row, .collapse.site-branding-container .row, .collapse.main-navigation .row, .featured-content .entry-header .collapse.entry-header-row .row, .featured-content .collapse.featured-content-inner .row, .row.collapse .navigation, .collapse.navigation .navigation, .collapse.site-branding-container .navigation, .collapse.main-navigation .navigation, .featured-content .entry-header .collapse.entry-header-row .navigation, .featured-content .collapse.featured-content-inner .navigation, .row.collapse .site-branding-container, .collapse.navigation .site-branding-container, .collapse.site-branding-container .site-branding-container, .collapse.main-navigation .site-branding-container, .featured-content .entry-header .collapse.entry-header-row .site-branding-container, .featured-content .collapse.featured-content-inner .site-branding-container, .row.collapse .main-navigation, .collapse.navigation .main-navigation, .collapse.site-branding-container .main-navigation, .collapse.main-navigation .main-navigation, .featured-content .entry-header .collapse.entry-header-row .main-navigation, .featured-content .collapse.featured-content-inner .main-navigation, .row.collapse .featured-content .entry-header .entry-header-row, .featured-content .entry-header .row.collapse .entry-header-row, .collapse.navigation .featured-content .entry-header .entry-header-row, .featured-content .entry-header .collapse.navigation .entry-header-row, .collapse.site-branding-container .featured-content .entry-header .entry-header-row, .featured-content .entry-header .collapse.site-branding-container .entry-header-row, .collapse.main-navigation .featured-content .entry-header .entry-header-row, .featured-content .entry-header .collapse.main-navigation .entry-header-row, .featured-content .entry-header .collapse.entry-header-row .entry-header-row, .featured-content .collapse.featured-content-inner .entry-header .entry-header-row, .featured-content .entry-header .collapse.featured-content-inner .entry-header-row, .row.collapse .featured-content .featured-content-inner, .featured-content .row.collapse .featured-content-inner, .collapse.navigation .featured-content .featured-content-inner, .featured-content .collapse.navigation .featured-content-inner, .collapse.site-branding-container .featured-content .featured-content-inner, .featured-content .collapse.site-branding-container .featured-content-inner, .collapse.main-navigation .featured-content .featured-content-inner, .featured-content .collapse.main-navigation .featured-content-inner, .featured-content .entry-header .collapse.entry-header-row .featured-content-inner, .featured-content .collapse.featured-content-inner .featured-content-inner {
@@ -979,16 +1029,13 @@ select {
   .large-2 {
     width: 16.66667%; }
   .large-3, body.layout-three-column-default #secondary,
-  body.layout-three-column-reversed #secondary,
-  body.layout-three-column-center #secondary, #tertiary {
+  body.layout-three-column-reversed #secondary, body.layout-three-column-center #secondary, #tertiary {
     width: 25%; }
   .large-4, #secondary {
     width: 33.33333%; }
   .large-5 {
     width: 41.66667%; }
-  .large-6, body.layout-three-column-default #primary,
-  body.layout-three-column-reversed #primary,
-  body.layout-three-column-center #primary {
+  .large-6, body.layout-three-column-default #primary, body.layout-three-column-reversed #primary, body.layout-three-column-center #primary {
     width: 50%; }
   .large-7 {
     width: 58.33333%; }
@@ -3156,7 +3203,7 @@ a {
     .navigation.pagination .nav-links {
       float: left;
       padding-left: 0; }
-      .navigation.pagination .nav-links .page-numbers:not(.prev):not(.next) {
+      .navigation.pagination .nav-links .page-numbers {
         display: none; } }
 
 .comment-navigation .nav-previous,
@@ -4516,125 +4563,88 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
 /*--------------------------------------------------------------
 >>> Gutenberg:
 --------------------------------------------------------------*/
-.wp-block-cover-image.alignfull,
-.wp-block-image.alignfull,
-.wp-block-cover-text.alignfull,
-.wp-block-image.alignfull,
-.wp-block-gallery.alignfull,
-.wp-block-text-columns.alignfull {
+body.customize-support .wp-block-cover-image {
+  margin-bottom: 1.5rem; }
+
+body.customize-support .alignfull {
   margin-right: -4.4375rem;
   max-width: 100%; }
   @media only screen and (max-width: 55em) {
-    .wp-block-cover-image.alignfull,
-    .wp-block-image.alignfull,
-    .wp-block-cover-text.alignfull,
-    .wp-block-image.alignfull,
-    .wp-block-gallery.alignfull,
-    .wp-block-text-columns.alignfull {
+    body.customize-support .alignfull {
       max-width: inherit; } }
-  .wp-block-cover-image.alignfull figcaption,
-  .wp-block-image.alignfull figcaption,
-  .wp-block-cover-text.alignfull figcaption,
-  .wp-block-image.alignfull figcaption,
-  .wp-block-gallery.alignfull figcaption,
-  .wp-block-text-columns.alignfull figcaption {
-    padding: 0 3.375em; }
+  body.customize-support .alignfull img {
+    width: -webkit-calc( 100% + 8.875rem);
+    width: calc( 100% + 8.875rem);
+    max-width: -webkit-calc( 100% + 8.875rem);
+    max-width: calc( 100% + 8.875rem); }
+    @media only screen and (max-width: 55em) {
+      body.customize-support .alignfull img {
+        max-width: -webkit-calc( 100% + 4.4375rem);
+        max-width: calc( 100% + 4.4375rem);
+        width: -webkit-calc( 100% + 4.4375rem);
+        width: calc( 100% + 4.4375rem); } }
 
-.wp-block-image.alignfull > img,
-.wp-block-cover-image.alignfull img,
-.wp-block-image.alignfull img {
-  width: -webkit-calc( 100% + 8.875rem);
-  width: calc( 100% + 8.875rem);
-  max-width: -webkit-calc( 100% + 8.875rem);
-  max-width: calc( 100% + 8.875rem); }
-  @media only screen and (max-width: 55em) {
-    .wp-block-image.alignfull > img,
-    .wp-block-cover-image.alignfull img,
-    .wp-block-image.alignfull img {
-      max-width: -webkit-calc( 100% + 4.4375rem);
-      max-width: calc( 100% + 4.4375rem);
-      width: -webkit-calc( 100% + 4.4375rem);
-      width: calc( 100% + 4.4375rem); } }
+body.customize-support .alignwide {
+  margin-right: 0;
+  margin-left: 0;
+  width: 100%; }
 
-.wp-block-cover-image.alignwide,
-.wp-block-image.alignwide,
-.wp-block-cover-text.alignwide,
-.wp-block-image.alignwide,
-.wp-block-gallery.alignwide,
-.wp-block-text-columns.alignwide {
+body.customize-support .wp-block-image.alignleft,
+body.customize-support .wp-block-gallery.alignleft,
+body.customize-support .wp-block-video.alignleft,
+body.customize-support .wp-block-quote.alignleft,
+body.customize-support .wp-block-text-columns.alignleft,
+body.customize-support .entry-content ul.alignleft,
+body.customize-support .entry-content ol.alignleft,
+body.customize-support .wp-block-cover-text.alignleft {
+  margin: 0 0 0.5em 1em; }
+
+body.customize-support .wp-block-image.alignright,
+body.customize-support .wp-block-gallery.alignright,
+body.customize-support .wp-block-video.alignright,
+body.customize-support .wp-block-quote.alignright,
+body.customize-support .wp-block-text-columns.alignright,
+body.customize-support .entry-content ul.alignright,
+body.customize-support .entry-content ol.alignright,
+body.customize-support .wp-block-cover-text.alignright {
+  margin: 0 1em 0.5em 0; }
+
+body.customize-support .wp-block-image.alignleft, body.customize-support .wp-block-image.alignright,
+body.customize-support .wp-block-gallery.alignleft,
+body.customize-support .wp-block-gallery.alignright,
+body.customize-support .wp-block-video.alignleft,
+body.customize-support .wp-block-video.alignright,
+body.customize-support .wp-block-quote.alignleft,
+body.customize-support .wp-block-quote.alignright,
+body.customize-support .wp-block-text-columns.alignleft,
+body.customize-support .wp-block-text-columns.alignright,
+body.customize-support .entry-content ul.alignleft,
+body.customize-support .entry-content ul.alignright,
+body.customize-support .entry-content ol.alignleft,
+body.customize-support .entry-content ol.alignright,
+body.customize-support .wp-block-cover-text.alignleft,
+body.customize-support .wp-block-cover-text.alignright {
+  max-width: 40%;
+  width: 100%; }
+  body.customize-support .wp-block-image.alignleft img, body.customize-support .wp-block-image.alignright img,
+  body.customize-support .wp-block-gallery.alignleft img,
+  body.customize-support .wp-block-gallery.alignright img,
+  body.customize-support .wp-block-video.alignleft img,
+  body.customize-support .wp-block-video.alignright img,
+  body.customize-support .wp-block-quote.alignleft img,
+  body.customize-support .wp-block-quote.alignright img,
+  body.customize-support .wp-block-text-columns.alignleft img,
+  body.customize-support .wp-block-text-columns.alignright img,
+  body.customize-support .entry-content ul.alignleft img,
+  body.customize-support .entry-content ul.alignright img,
+  body.customize-support .entry-content ol.alignleft img,
+  body.customize-support .entry-content ol.alignright img,
+  body.customize-support .wp-block-cover-text.alignleft img,
+  body.customize-support .wp-block-cover-text.alignright img {
+    width: inherit; }
+
+body.customize-support .wp-block-gallery {
   margin-right: 0;
   margin-left: 0; }
-  .wp-block-cover-image.alignwide img,
-  .wp-block-image.alignwide img,
-  .wp-block-cover-text.alignwide img,
-  .wp-block-image.alignwide img,
-  .wp-block-gallery.alignwide img,
-  .wp-block-text-columns.alignwide img {
-    width: 100%;
-    max-height: 100%; }
-
-.wp-block-image.alignleft,
-.wp-block-gallery.alignleft,
-.wp-block-video.alignleft,
-.wp-block-quote.alignleft,
-.wp-block-text-columns.alignleft,
-.entry-content ul.alignleft,
-.entry-content ol.alignleft,
-.wp-block-cover-text.alignleft {
-  margin: 0 0 0.25em 1em; }
-
-.wp-block-image.alignright,
-.wp-block-gallery.alignright,
-.wp-block-video.alignright,
-.wp-block-quote.alignright,
-.wp-block-text-columns.alignright,
-.entry-content ul.alignright,
-.entry-content ol.alignright,
-.wp-block-cover-text.alignright {
-  margin: 0 1em 0.25em 0; }
-
-.wp-block-image.alignleft, .wp-block-image.alignright,
-.wp-block-gallery.alignleft,
-.wp-block-gallery.alignright,
-.wp-block-video.alignleft,
-.wp-block-video.alignright,
-.wp-block-quote.alignleft,
-.wp-block-quote.alignright,
-.wp-block-text-columns.alignleft,
-.wp-block-text-columns.alignright,
-.entry-content ul.alignleft,
-.entry-content ul.alignright,
-.entry-content ol.alignleft,
-.entry-content ol.alignright,
-.wp-block-cover-text.alignleft,
-.wp-block-cover-text.alignright {
-  max-width: 40%; }
-  @media only screen and (max-width: 55em) {
-    .wp-block-image.alignleft, .wp-block-image.alignright,
-    .wp-block-gallery.alignleft,
-    .wp-block-gallery.alignright,
-    .wp-block-video.alignleft,
-    .wp-block-video.alignright,
-    .wp-block-quote.alignleft,
-    .wp-block-quote.alignright,
-    .wp-block-text-columns.alignleft,
-    .wp-block-text-columns.alignright,
-    .entry-content ul.alignleft,
-    .entry-content ul.alignright,
-    .entry-content ol.alignleft,
-    .entry-content ol.alignright,
-    .wp-block-cover-text.alignleft,
-    .wp-block-cover-text.alignright {
-      max-width: 100%;
-      margin-right: 0;
-      margin-left: 0; } }
-
-body.customize-support h1,
-body.customize-support h2,
-body.customize-support h3,
-body.customize-support h4,
-body.customize-support h5,
-body.customize-support h6,
-body.customize-support .site-title,
-body.customize-support .page-title {
-  clear: none; }
+  body.customize-support .wp-block-gallery.is-cropped .blocks-gallery-item img {
+    height: auto; }
