--- a/style.css
+++ b/style.css
@@ -4572,3 +4572,105 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
         max-width: 65px; }
     .primer-wc-cart-menu-item .widget_shopping_cart .mini_cart_item a.remove {
       margin-top: 20px; } }
+
+/*--------------------------------------------------------------
+>>> Gutenberg:
+--------------------------------------------------------------*/
+.wp-block-cover-image {
+  margin-bottom: 1.5rem; }
+
+[class^="wp-block-"].alignfull {
+  margin-left: -4.4375rem;
+  max-width: 100%; }
+  @media only screen and (max-width: 55em) {
+    [class^="wp-block-"].alignfull {
+      max-width: inherit; } }
+  [class^="wp-block-"].alignfull img {
+    width: -webkit-calc( 100% + 8.875rem);
+    width: calc( 100% + 8.875rem);
+    max-width: -webkit-calc( 100% + 8.875rem);
+    max-width: calc( 100% + 8.875rem); }
+    @media only screen and (max-width: 55em) {
+      [class^="wp-block-"].alignfull img {
+        max-width: -webkit-calc( 100% + 4.4375rem);
+        max-width: calc( 100% + 4.4375rem);
+        width: -webkit-calc( 100% + 4.4375rem);
+        width: calc( 100% + 4.4375rem); } }
+
+[class^="wp-block-"].alignwide {
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%; }
+
+.wp-block-image.alignleft,
+.wp-block-gallery.alignleft,
+.wp-block-video.alignleft,
+.wp-block-quote.alignleft,
+.wp-block-text-columns.alignleft,
+.entry-content ul.alignleft,
+.entry-content ol.alignleft,
+.wp-block-cover-text.alignleft {
+  margin: 0 1em 0.5em 0; }
+
+.wp-block-image.alignright,
+.wp-block-gallery.alignright,
+.wp-block-video.alignright,
+.wp-block-quote.alignright,
+.wp-block-text-columns.alignright,
+.entry-content ul.alignright,
+.entry-content ol.alignright,
+.wp-block-cover-text.alignright {
+  margin: 0 0 0.5em 1em; }
+
+.wp-block-image.alignleft, .wp-block-image.alignright,
+.wp-block-gallery.alignleft,
+.wp-block-gallery.alignright,
+.wp-block-video.alignleft,
+.wp-block-video.alignright,
+.wp-block-quote.alignleft,
+.wp-block-quote.alignright,
+.wp-block-text-columns.alignleft,
+.wp-block-text-columns.alignright,
+.entry-content ul.alignleft,
+.entry-content ul.alignright,
+.entry-content ol.alignleft,
+.entry-content ol.alignright,
+.wp-block-cover-text.alignleft,
+.wp-block-cover-text.alignright {
+  max-width: 40%;
+  width: 100%; }
+  .wp-block-image.alignleft img, .wp-block-image.alignright img,
+  .wp-block-gallery.alignleft img,
+  .wp-block-gallery.alignright img,
+  .wp-block-video.alignleft img,
+  .wp-block-video.alignright img,
+  .wp-block-quote.alignleft img,
+  .wp-block-quote.alignright img,
+  .wp-block-text-columns.alignleft img,
+  .wp-block-text-columns.alignright img,
+  .entry-content ul.alignleft img,
+  .entry-content ul.alignright img,
+  .entry-content ol.alignleft img,
+  .entry-content ol.alignright img,
+  .wp-block-cover-text.alignleft img,
+  .wp-block-cover-text.alignright img {
+    width: inherit; }
+
+.wp-block-gallery {
+  margin-left: 0;
+  margin-right: 0; }
+  .wp-block-gallery.is-cropped .blocks-gallery-item img {
+    height: auto; }
+
+.wp-block-quote p {
+  margin-bottom: 0; }
+
+.wp-block-pullquote {
+  margin-top: 1em;
+  margin-bottom: 1em; }
+
+.wp-block-button.aligncenter {
+  margin-bottom: 1.5em; }
+
+.wp-block-audio audio {
+  width: 100%; }
