Tweak column styles

--- a/.dev/sass/compat/gutenberg.scss
+++ b/.dev/sass/compat/gutenberg.scss
@@ -93,25 +93,32 @@
 
 .wp-block-column {
 	flex: 1;
-	margin: 0 20px;
 }
 
-@media (max-width: 764px) {
-	.wp-block-columns.has-3-columns {
-		flex-flow: row wrap;
-	}
-
-	.has-3-columns .wp-block-column:first-child {
-		flex-basis: 100%;
-	}
-}
-
-@media (max-width: 478px) {
-	.wp-block-columns.has-3-columns {
-		display: block;
-	}
+.wp-block-columns {
 
 	.wp-block-column {
-		margin: 20px 0;
+		flex-basis: 100%
+	}
+}
+
+@media #{$medium-only} {
+	.wp-block-column {
+		padding-right: 0;
+	}
+}
+
+@media #{$small-only} {
+	.wp-block-columns {
+		&.has-1-columns,
+		&.has-2-columns,
+		&.has-3-columns,
+		&.has-4-columns {
+			display: block;
+		}
+	}
+
+	.wp-block-column:not(:first-child) {
+		padding-left: 0;
 	}
 }
