--- a/editor-style.css
+++ b/editor-style.css
@@ -161,7 +161,7 @@ select {
   width: 100%;
   float: left; }
 
-[class*="column"] + [class*="column"]:last-child {
+[class*="column"] + [class*="column"]:last-child:not(.wp-block-column):not(.wp-block-columns) {
   float: right; }
 
 [class*="column"] + [class*="column"].end {
