--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ select {
   width: 100%;
   float: left; }
 
-[class*="column"] + [class*="column"]:last-child {
+[class*="column"] + [class*="column"]:last-child:not(.wp-block-column):not(.wp-block-columns) {
   float: right; }
 
 [class*="column"] + [class*="column"].end {
@@ -4688,21 +4688,19 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
   -webkit-flex: 1;
   -moz-box-flex: 1;
   -ms-flex: 1;
-  flex: 1;
-  margin: 0 20px; }
+  flex: 1; }
 
-@media (max-width: 764px) {
-  .wp-block-columns.has-3-columns {
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap; }
-  .has-3-columns .wp-block-column:first-child {
-    -webkit-flex-basis: 100%;
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%; } }
+.wp-block-columns .wp-block-column {
+  -webkit-flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%; }
 
-@media (max-width: 478px) {
-  .wp-block-columns.has-3-columns {
-    display: block; }
+@media only screen and (min-width: 55.063em) and (max-width: 64em) {
   .wp-block-column {
-    margin: 20px 0; } }
+    padding-right: 0; } }
+
+@media only screen and (max-width: 55em) {
+  .wp-block-columns.has-1-columns, .wp-block-columns.has-2-columns, .wp-block-columns.has-3-columns, .wp-block-columns.has-4-columns {
+    display: block; }
+  .wp-block-column:not(:first-child) {
+    padding-left: 0; } }
