--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
  * Author URI: https://www.godaddy.com/
  * Description: Escapade is a Primer child theme with a unique sidebar navigation.
  * Version: 1.1.3
+ * Tested up to: 5.4
+ * Requires PHP: 5.6.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: escapade
@@ -1706,7 +1708,7 @@ select {
   font-family: 'Genericons';
   src: url("assets/genericons/font/genericons-regular-webfont.eot"); }
 
-/* IE8 and below use EOT and allow cross-site embedding. 
+/* IE8 and below use EOT and allow cross-site embedding.
    IE9 uses WOFF which is base64 encoded to allow cross-site embedding.
    So unfortunately, IE9 will throw a console error, but it'll still work.
    When the font is base64 encoded, cross-site embedding works in Firefox */
